Follow-up Update
*added Gumroad links for Germs and Sandbag Spectator
*removed pattern from heading
*removed extra empty columns from Illustration section
*made body text lighter to distinguish from links
*added link to email in About section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="display-1 text-center m-0 w-100 text-primary bg-danger p-0" style="background-image: url('patterns/aaaaa.png');background-size:auto;background-position:center center;background-repeat:repeat;">Jacob Breck</h1>
+          <h1 class="display-1 text-center m-0 w-100 text-primary bg-danger p-0" style="background-size:auto;background-position:center center;background-repeat:repeat;">Jacob Breck</h1>
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
             <li class="nav-item">
               <a class="nav-link" href="https://www.twitter.com/jacobbreck">Twitter</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" >
               <a class="nav-link" href="" data-target="#about" data-toggle="pill">About</a>
             </li>
           </ul>
@@ -334,6 +334,13 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <p class="lead text-center" contenteditable="true">Like this comic?
+                    <a href="gum.co/sandbag">Download the pdf</a>
+                  </p>
+                </div>
+              </div>
             </div>
             <div class="tab-pane fade show active" id="germs" role="tabpanel">
               <div class="row my-5">
@@ -357,6 +364,13 @@
                       <img class="img-fluid d-block  m-0 mx-auto p-1" src="germs/1-2.png"> </div>
                     <div class="col-md-3 col-xs-12 m-0 p-0">
                       <img class="img-fluid d-block  m-0 mx-auto p-2" src="germs/1-3.png"> </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <p class="lead text-center" contenteditable="true">Like my Germs?
+                        <a href="gum.co/germs">Download the pdf</a>
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -462,30 +476,30 @@
                 <div class="col-md-12">
                   <img class="img-fluid d-block" src="img/jbreck_encounter-poster.jpg" width="100%"> </div>
               </div>
-              <div class="tab-pane fade" id="animation" role="tabpanel">
-                <div class="row">
-                  <div class="col-md-12">
-                    <iframe src="https://player.vimeo.com/video/107396145" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                    <p>
-                      <a href="https://vimeo.com/107396145">The Internship</a> from
-                      <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
-                      <a href="https://vimeo.com">Vimeo</a>.</p>
-                    <iframe src="https://player.vimeo.com/video/176201616" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
-                    <p>
-                      <a href="https://vimeo.com/176201616">Jacob Breck - Demo Reel 2016</a> from
-                      <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
-                      <a href="https://vimeo.com">Vimeo</a>.</p>
-                  </div>
+            </div>
+            <div class="tab-pane fade" id="animation" role="tabpanel">
+              <div class="row">
+                <div class="col-md-12">
+                  <iframe src="https://player.vimeo.com/video/107396145" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                  <p>
+                    <a href="https://vimeo.com/107396145">The Internship</a> from
+                    <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
+                    <a href="https://vimeo.com">Vimeo</a>.</p>
+                  <iframe src="https://player.vimeo.com/video/176201616" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+                  <p>
+                    <a href="https://vimeo.com/176201616">Jacob Breck - Demo Reel 2016</a> from
+                    <a href="https://vimeo.com/jacobbreck">Jacob Breck</a> on
+                    <a href="https://vimeo.com">Vimeo</a>.</p>
                 </div>
               </div>
-              <div class="tab-pane fade" role="tabpanel" id="about">
-                <div class="row">
-                  <div class="col-md-12 m-2 p-3">
-                    <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png"> </div>
-                </div>
-                <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola. He likes to think he's funny or something. Interested in commissions/projects/telling him you like his art and stuff? You can reach him
-                  via email at JacobBBreck@gmail.com. </p>
+            </div>
+            <div class="tab-pane fade" role="tabpanel" id="about">
+              <div class="row">
+                <div class="col-md-12 m-2 p-3">
+                  <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png"> </div>
               </div>
+              <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola. He likes to think he's funny or something. Interested in commissions/projects/telling him you like his art and stuff? <a href="mailto:JacobBBreck@gmail.com">You can reach him via
+                email at JacobBBreck@gmail.com.</a></p>
             </div>
           </div>
         </div>
