followup update 2: the furrowing
*driving in the point to the browser that I want Grey, not black, text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li class="nav-item">
               <a class="nav-link" href="https://www.twitter.com/jacobbreck">Twitter</a>
             </li>
-            <li class="nav-item" >
+            <li class="nav-item">
               <a class="nav-link" href="" data-target="#about" data-toggle="pill">About</a>
             </li>
           </ul>
@@ -498,8 +498,9 @@
                 <div class="col-md-12 m-2 p-3">
                   <img class="img-fluid d-block mx-auto rounded" src="img/headerimg.png"> </div>
               </div>
-              <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola. He likes to think he's funny or something. Interested in commissions/projects/telling him you like his art and stuff? <a href="mailto:JacobBBreck@gmail.com">You can reach him via
-                email at JacobBBreck@gmail.com.</a></p>
+              <p class="lead p-0 m-2">Jacob Breck is a cartoonist and illustrator living in Baltimore, MD. He lives with his fiance Cola. He likes to think he's funny or something. Interested in commissions/projects/telling him you like his art and stuff?
+                <a href="mailto:JacobBBreck@gmail.com">You can reach him via email at JacobBBreck@gmail.com.</a>
+              </p>
             </div>
           </div>
         </div>
