social media update
*changed heading
*changed social media handles

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="theme.css" type="text/css">
   <title>J.B. Breck - Comics, Illustration, Animation</title>
-  <meta name="description" content="Comics, Illustration, Animation, Sketches by J.B. Breck">
-  <meta name="keywords" content="jacob josie j b breck comics illustration digital print comic funny ironic humor animation dark surreal dream dreams surrealism gender dog ant ants portrait sketches sketch sketchbook intern internship capitalism capitalist capitalists pheonix desert pattern water ocean storm sea wave waves seas oceans germ germs"> </head>
+  <meta name="description" content="Comics, Illustration, Animation, Sketches by Josie Breck">
+  <meta name="keywords" content="josie j b breck comics illustration digital print comic funny ironic humor animation dark surreal dream dreams surrealism gender dog ant ants portrait sketches sketch sketchbook intern internship capitalism capitalist capitalists pheonix desert pattern water ocean storm sea wave waves seas oceans germ germs">
+</head>
 
 <body>
   <div class="py-0">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="display-1 text-center m-0 w-100 p-0 bg-primary text-secondary" style="background-size:auto;background-position:center center;background-repeat:repeat;">J.B. Breck</h1>
+          <h1 class="display-1 text-center m-0 w-100 p-0 bg-primary text-secondary" style="background-size:auto;background-position:center center;background-repeat:repeat;">Josie Breck</h1>
         </div>
       </div>
     </div>
@@ -35,10 +36,10 @@
               <a href="" class="nav-link" data-target="#animation" data-toggle="pill">Animation</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.instagram.com/j_b_breck" target="_blank">Instagram</a>
+              <a class="nav-link" href="https://www.instagram.com/josie_B_B" target="_blank">Instagram</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.twitter.com/j_b_breck" target="_blank">Twitter</a>
+              <a class="nav-link" href="https://www.twitter.com/josie_b_b" target="_blank">Twitter</a>
             </li>
             <li class="nav-item">
               <a href="https://www.gumroad.com/jbbreck" class="nav-link" target="_blank">Store</a>
@@ -148,9 +149,7 @@
                 <div class="col-md-12">
                   <iframe src="https://player.vimeo.com/video/107396145" width="640" height="360" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
                   <p>
-                    <a href="https://vimeo.com/107396145">The Internship</a> from
-                    <a href="https://vimeo.com/jbbreck">J.B. Breck</a> on
-                    <a href="https://vimeo.com">Vimeo</a>.</p>
+                    <a href="https://vimeo.com/107396145">The Internship</a> from <a href="https://vimeo.com/jbbreck">J.B. Breck</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
                 </div>
               </div>
             </div>
@@ -161,9 +160,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
-      <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-    </pingendo>
+    <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
   </div>
 </body>
 
